--- a/app/src/main/res/layout/ramen_list_item.xml
+++ b/app/src/main/res/layout/ramen_list_item.xml
@@ -7,12 +7,14 @@
     android:orientation="horizontal">
 
     <TextView
+        android:id="@+id/txtName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="라면이름"
         android:textSize="17sp"/>
 
     <TextView
+        android:id="@+id/txtExpiry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="(유효기한)"
@@ -24,6 +26,7 @@
         android:layout_weight="1" />
 
     <TextView
+        android:id="@+id/txtAddress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="농심" />
